
  Version 3.2.1 (41.0)   2009-10-
  ------------------------------------------------------------------------------
    - shutdown after a job feature was added to GUI
    - hibernate after a job feature was added to GUI
    - `boot-on` and `boot-off` commands were added to boot time defragger
    - Scheduler has been translated into Spanish (AR) language


  Version 3.2.0 (41.0)   2009-09-29
  ------------------------------------------------------------------------------
    - Ultra Fast NTFS scanning feature was added, NTFS analysis becomes 
      approximately 25 times faster now
    - defragmentaion of additional streams attached to NTFS files was added 
    - information about trash (temporary files) excluded from reports,
      statistics and cluster map; these files are completely ignored now
    - a lot of new options were added to the console program
    - the \??\ sequence removed from file names in reports
    - Thai translation was made
    - some important parts of handbook were completely rewritten
    - Scheduler was rewritten in C language; NET framework is not required now!
    - ability to translate Scheduler into foreign languages was added
    - GUI options were moved from udefrag-gui.cmd script to 
      easy to understand guiopts.lua file
    - debugging information will not be saved on disk since this version of the 
      program; read carefully an appropriate chapter of program's handbook for 
      detailed instructions about kernel mode driver debugging instead
    - few fatal driver bugs were fixed
    - driver's reliability was increased
    - now UltraDefrag requires less software for its development
    - FOR PROGRAMMERS: build configurator was rewritten in Lua
    - NOTE FOR PROGRAMMERS: to successfully recompile the driver run 
      configure.pl script and click 'Apply patch to MinGW' button once again


  Version 3.1.0 (33.0)   2009-05-13
  ------------------------------------------------------------------------------