@@ -358,6 +358,9 @@ udefrag e: >> c:\ud.log
 		<span class="code">shutdown -s -t 00</span> command to halt your computer after 
 		the defragmentation job. 
 		</p>
+		<p>To hibernate your PC use <span class="code">hibernate now</span> command. An appropriate 
+		tool is included in UltraDefrag package; it installs by default to your system32 directory.
+		</p>
 	</div>
 </div>
 
