@@ -105,6 +105,7 @@
 		<li>Nice graphical interface - compact, functional and easy to use.</li>
 		<li>Ability to automatically shutdown or hibernate PC after a job.</li>
 		<li>Powerful command line interface.</li>
+		<li>Ability to hibernate PC through command line.</li>
 		<li>Safety, because the file moving is accomplished with Microsoft's own Defrag API.</li>
 		<li>Simple to use.</li>
 		<li>Ability to generate html reports of fragmentation status.</li>
