@@ -8,6 +8,10 @@ cd ..\zenwinx
 lua ..\..\tools\mkmod.lua zenwinx.build
 if %errorlevel% neq 0 goto end
 
+cd ..\hibernate
+lua ..\..\tools\mkmod.lua hibernate.build
+if %errorlevel% neq 0 goto end
+
 cd ..\udefrag
 lua ..\..\tools\mkmod.lua udefrag.build
 if %errorlevel% neq 0 goto end
