@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<assembly xmlns="urn:schemas-microsoft-com:asm.v1" manifestVersion="1.0">
+ <assemblyIdentity version="1.0.0.0" name="hibernate" processorArchitecture="X86" 
+type="win32"/><description>Hibernate for Windows 
+</description>
+<dependency>
+  <dependentAssembly>
+    <assemblyIdentity type="win32" name="Microsoft.Windows.Common-Controls" version="6.0.0.0" 
+processorArchitecture="X86" 
+	publicKeyToken="6595b64144ccf1df" language="*" />
+   </dependentAssembly>
+ </dependency>
+ <trustInfo xmlns="urn:schemas-microsoft-com:asm.v2">
+  <security>
+    <requestedPrivileges xmlns="urn:schemas-microsoft-com:asm.v3">
+      <requestedExecutionLevel  level="requireAdministrator" uiAccess="false" />
+    </requestedPrivileges>
+  </security>
+ </trustInfo>
+</assembly>
