@@ -1,0 +1,49 @@
+/*
+* Hibernate for Windows - command line tool for Windows hibernation.
+*
+* Programmer:    Dmitri Arkhangelski (dmitriar@gmail.com).
+* Creation date: October 2009.
+* License:       Public Domain
+*/
+
+#define VS_VERSION_INFO     1
+#ifndef WINVER
+#define WINVER 0x0400
+#endif
+#include <winresrc.h>
+
+/* manifests for all targets produces make-manifests.cmd script */
+1 24 "hibernate.manifest"
+
+VS_VERSION_INFO VERSIONINFO
+ FILEVERSION 1,0,0,0
+ PRODUCTVERSION 1,0,0,0
+ FILEFLAGSMASK 0x3fL
+#ifdef _DEBUG
+ FILEFLAGS 0x1L
+#else
+ FILEFLAGS 0x0L
+#endif
+ FILEOS 0x40004L
+ FILETYPE 0x2L
+ FILESUBTYPE 0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"
+        BEGIN
+            VALUE "CompanyName", "UltraDefrag Development Team\0"
+            VALUE "FileDescription", "Hibernate for Windows\0"
+            VALUE "FileVersion", "1, 0, 0, 0\0"
+            VALUE "InternalName", "hibernate\0"
+            VALUE "LegalCopyright", "Public Domain\0"
+            VALUE "OriginalFilename", "hibernate.exe\0"
+            VALUE "ProductName", "Hibernate for Windows\0"
+            VALUE "ProductVersion", "1, 0, 0, 0\0"
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x409, 1200
+    END
+END
