@@ -1,0 +1,15 @@
+;------------------------------------------------------------------------------
+; Hibernate for Windows - command line tool for Windows hibernation.
+;
+; Programmer:    Dmitri Arkhangelski
+; Creation date: October 2009
+; License:       Public Domain
+;------------------------------------------------------------------------------
+
+Hibernate for Windows is a part of UltraDefrag project. Visit our website
+for more details: 
+
+	http://ultradefrag.sourceforge.net/
+
+To hibernate your PC type 'hibernate now'.
+Enjoy!
